<resources>
    <string name="app_name">EpiFi App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">S.</string>
    <string name="first_of_few_steps_to_set_you_up_with_a_bank_account">First of few steps to set you up with a Bank Account</string>
    <string name="pan_number_text">Pan Number</string>
    <string name="description">Providing PAN and Date of Birth help us find and fetch your KYC from a central registry by the Government of India. <font color='#5e42ad'>Learn more</font></string>
    <string name="next_text">Next</string>
    <string name="learn_more_text">Learn more</string>
    <string name="i_don_t_have_pan">I don\'t have PAN</string>
    <string name="birthdate">Birthdate</string>
</resources>